--- a/index.html
+++ b/index.html
@@ -956,9 +956,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="schedule.html">PROGRAM</a>
                   </li>
-                  <li class="nav-item">
+                  <!-- <li class="nav-item">
                     <a class="nav-link" href="speakers.html">SPEAKERS</a>
-                  </li>
+                  </li> -->
                   <li class="nav-item">
                     <a class="nav-link" href="accommodation.html"
                       >Accommodation</a
