--- a/travel.html
+++ b/travel.html
@@ -374,7 +374,7 @@
             <h3>VISA REQUIREMENTS</h3>
           </div>
 
-          <div class="col-12 col-md-8">
+          <!-- <div class="col-12 col-md-8">
             <div class="custom-card">
               <div class="custom-card-body">
                 <h5 class="mb-3">Visa on Arrival ($30 USD)</h5>
@@ -390,7 +390,7 @@
                 </p>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <div class="col-12 col-md-4">
             <div class="custom-card">
