--- a/travel.html
+++ b/travel.html
@@ -527,7 +527,7 @@
               </ul>
             </div>
           </div>
-
+<!-- 
           <div class="col-12 col-md-4 mb-4">
             <div class="info-box">
               <i class="zmdi zmdi-car travel-tip-icon"></i>
@@ -543,7 +543,7 @@
               </p>
               <a href="#" class="btn btn-outline mt-3">Learn More</a>
             </div>
-          </div>
+          </div> -->
 
           <div class="col-12 mt-4">
             <div
