--- a/index.html
+++ b/index.html
@@ -1014,7 +1014,7 @@
                   </div>
                   <div class="meta-item">
                     <i class="fas fa-building"></i>
-                    <span>Kigali Convention Centre</span>
+                    <span>Kigali Serena Hotel</span>
                   </div>
                 </div>
                 <div class="hero-cta">
