--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
       }
 
       body {
-        font-family: 'Roboto', sans-serif;
+        font-family: 'Montserrat', sans-serif;
         color: var(--text-color);
         overflow-x: hidden;
         background-color: #ffffff;
@@ -75,65 +75,105 @@
         position: fixed;
         width: 100%;
         z-index: 999;
-        background: rgba(255, 255, 255, 0.95);
+        background: #fff;
         box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
-        transition: all 0.5s;
-      }
-
-      .header-shrink {
         padding: 5px 0;
       }
 
       .logo img {
-        max-height: 60px;
-        transition: all 0.3s;
+        max-height: 120px;
       }
 
-      .fa-solid fa-bars-staggered {
-        background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(34, 59, 115, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+      .navbar {
+        padding: 0;
+        display: flex;
+        justify-content: space-between;
       }
 
-      .navbar-toggler {
-        border: 1px solid var(--primary-color);
-        padding: 0.25rem 0.5rem;
+      .navbar-collapse {
+        justify-content: flex-end;
       }
 
-      .main-menu {
-        margin-right: 15px;
+      /* Force horizontal layout for menu on large screens */
+      @media (min-width: 992px) {
+        .navbar-expand-lg .navbar-collapse {
+          display: flex !important;
+        }
+
+        .navbar-expand-lg .navbar-toggler {
+          display: none;
+        }
+
+        .navbar-expand-lg .navbar-nav {
+          flex-direction: row;
+          margin: 0 !important;
+        }
+
+        .nav-item {
+          margin: 0 10px;
+        }
+
+        .nav-link {
+          padding: 25px 10px !important;
+          display: inline-block;
+          font-weight: 600;
+          font-size: 12px;
+          color: var(--primary-color);
+          text-transform: uppercase;
+        }
+
+        .btn-primary {
+          background-color: #dc4405;
+          border-color: #dc4405;
+          margin-left: 15px;
+          padding: 12px 25px;
+          border-radius: 50px;
+          font-weight: 600;
+          text-transform: uppercase;
+          letter-spacing: 1px;
+        }
       }
 
-      .main-menu ul li {
-        margin: 0 2px;
+      /* Hamburger menu styling for mobile */
+      @media (max-width: 991.98px) {
+        .navbar-toggler {
+          padding: 10px;
+          background-color: white;
+        }
+
+        .navbar-toggler-icon {
+          background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(0, 104, 55, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+        }
       }
 
-      .main-menu ul li a {
-        font-weight: 700;
-        font-size: 15px;
-        color: var(--primary-color);
+      /* Register button styling */
+      .register-btn {
+        background-color: #dc4405;
+        color: white;
+        padding: 12px 30px;
+        font-weight: 600;
+        font-size: 14px;
         text-transform: uppercase;
-        padding: 30px 15px;
-        transition: all 0.3s;
-        letter-spacing: 0.5px;
+        border-radius: 30px;
+        text-decoration: none;
+        transition: all 0.3s ease;
+        display: inline-block;
+        margin-left: 20px;
       }
 
-      .main-menu ul li a:hover {
-        color: var(--secondary-color);
+      .register-btn:hover {
+        background-color: #c43c00;
+        color: white;
+        text-decoration: none;
+        transform: translateY(-3px);
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
       }
 
-      .main-menu ul li.active a {
-        color: var(--secondary-color);
-        position: relative;
-        font-weight: 800;
-      }
-
-      .main-menu ul li.active a::after {
-        content: '';
-        position: absolute;
-        bottom: 25px;
-        left: 15px;
-        width: calc(100% - 30px);
-        height: 2px;
-        background: var(--secondary-color);
+      @media (max-width: 991px) {
+        .register-btn {
+          margin-top: 15px;
+          margin-left: 0;
+        }
       }
 
       /* Page Hero */
@@ -169,11 +209,13 @@
       }
 
       .page-hero-content h1 {
-        font-size: 4rem;
+        font-size: 3rem;
         font-weight: 800;
         margin-bottom: 10px;
+        margin-top: 20px;
         animation: fadeInDown 1s;
         text-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+        color: white;
       }
 
       .page-hero-content p {
@@ -181,6 +223,7 @@
         max-width: 700px;
         margin: 0 auto;
         animation: fadeInUp 1s;
+        color: rgba(255, 255, 255, 0.8);
       }
 
       /* Breadcrumb */
@@ -654,8 +697,6 @@
               <a class="navbar-brand logo" href="index.html">
                 <img src="img/core-img/ASEA-LOGO.png" alt="ASEA Logo" />
               </a>
-
-              <!-- Navbar Toggler -->
               <button
                 class="navbar-toggler"
                 type="button"
@@ -665,40 +706,42 @@
                 aria-expanded="false"
                 aria-label="Toggle navigation"
               >
-                <span class="fa-solid fa-bars-staggered"></span>
+                <span class="navbar-toggler-icon"></span>
               </button>
-
               <!-- Navbar -->
               <div class="collapse navbar-collapse" id="conferNavbar">
                 <ul class="navbar-nav ml-auto main-menu">
-                  <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
-                  </li>
                   <li class="nav-item active">
-                    <a class="nav-link" href="about.html">About</a>
+                    <a class="nav-link" href="index.html">HOME</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="speakers.html">Speakers</a>
+                    <a class="nav-link" href="about.html">ABOUT</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="schedule.html">Schedule</a>
+                    <a class="nav-link" href="schedule.html">PROGRAM</a>
+                  </li>
+                  <!-- <li class="nav-item">
+                    <a class="nav-link" href="speakers.html">SPEAKERS</a>
+                  </li> -->
+                  <li class="nav-item">
+                    <a class="nav-link" href="sponsors.html">SPONSORS</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="accommodation.html">Venue</a>
+                    <a class="nav-link" href="accommodation.html"
+                      >Accommodation</a
+                    >
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="registration.html">Register</a>
+                    <a class="nav-link" href="travel.html">DESTINATION GUIDE</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
-                  </li>
+                  <!-- <li class="nav-item">
+                    <a class="nav-link" href="#">MEDIA</a>
+                  </li> -->
                 </ul>
-
-                <!-- Register Button -->
-                <a href="registration.html" class="btn btn-primary ml-lg-3"
-                  >Register Now</a
-                >
               </div>
+
+              <!-- Register Button -->
+              <a href="registration.html" class="register-btn">REGISTER</a>
             </nav>
           </div>
         </div>
@@ -711,7 +754,7 @@
       <div class="page-hero-overlay"></div>
       <div class="page-hero-content">
         <div class="container">
-          <h1>About The Conference</h1>
+          <h1 class="mt-5">About The Conference</h1>
           <p>Learn more about ASEA and the 2025 Annual Conference</p>
 
           <!-- Breadcrumb -->
