--- a/registration.html
+++ b/registration.html
@@ -17,6 +17,112 @@
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css" />
+    <style>
+      .header-area {
+        position: fixed;
+        width: 100%;
+        z-index: 999;
+        background: #fff;
+        box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
+        padding: 5px 0;
+      }
+
+      .logo img {
+        max-height: 120px;
+      }
+
+      .navbar {
+        padding: 0;
+        display: flex;
+        justify-content: space-between;
+      }
+
+      .navbar-collapse {
+        justify-content: flex-end;
+      }
+
+      /* Force horizontal layout for menu on large screens */
+      @media (min-width: 992px) {
+        .navbar-expand-lg .navbar-collapse {
+          display: flex !important;
+        }
+
+        .navbar-expand-lg .navbar-toggler {
+          display: none;
+        }
+
+        .navbar-expand-lg .navbar-nav {
+          flex-direction: row;
+          margin: 0 !important;
+        }
+
+        .nav-item {
+          margin: 0 10px;
+        }
+
+        .nav-link {
+          padding: 25px 10px !important;
+          display: inline-block;
+          font-weight: 600;
+          font-size: 12px;
+          color: var(--primary-color);
+          text-transform: uppercase;
+        }
+
+        .btn-primary {
+          background-color: #dc4405;
+          border-color: #dc4405;
+          margin-left: 15px;
+          padding: 12px 25px;
+          border-radius: 50px;
+          font-weight: 600;
+          text-transform: uppercase;
+          letter-spacing: 1px;
+        }
+      }
+
+      /* Hamburger menu styling for mobile */
+      @media (max-width: 991.98px) {
+        .navbar-toggler {
+          padding: 10px;
+          background-color: white;
+        }
+
+        .navbar-toggler-icon {
+          background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(0, 104, 55, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+        }
+      }
+
+      /* Register button styling */
+      .register-btn {
+        background-color: #dc4405;
+        color: white;
+        padding: 12px 30px;
+        font-weight: 600;
+        font-size: 14px;
+        text-transform: uppercase;
+        border-radius: 30px;
+        text-decoration: none;
+        transition: all 0.3s ease;
+        display: inline-block;
+        margin-left: 20px;
+      }
+
+      .register-btn:hover {
+        background-color: #c43c00;
+        color: white;
+        text-decoration: none;
+        transform: translateY(-3px);
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+      }
+
+      @media (max-width: 991px) {
+        .register-btn {
+          margin-top: 15px;
+          margin-left: 0;
+        }
+      }
+    </style>
   </head>
 
   <body>
@@ -28,59 +134,61 @@
 
     <!-- Header Area Start -->
     <header class="header-area">
-      <div class="classy-nav-container breakpoint-off">
-        <div class="container">
-          <!-- Classy Menu -->
-          <nav class="classy-navbar justify-content-between" id="conferNav">
-            <!-- Logo -->
-            <a class="nav-brand" href="index.html"
-              ><img src="img/core-img/ASEA-LOGO.png" width="90" alt=""
-            /></a>
-
-            <!-- Navbar Toggler -->
-            <div class="classy-navbar-toggler">
-              <span class="navbarToggler"
-                ><span></span><span></span><span></span
-              ></span>
-            </div>
-
-            <!-- Menu -->
-            <div class="classy-menu">
-              <!-- Menu Close Button -->
-              <div class="classycloseIcon">
-                <div class="cross-wrap">
-                  <span class="top"></span><span class="bottom"></span>
-                </div>
-              </div>
-              <!-- Nav Start -->
-              <div class="classynav">
-                <ul id="nav">
-                  <li><a href="index.html">Home</a></li>
-                  <li>
-                    <a href="#">About</a>
-                    <ul class="dropdown">
-                      <li><a href="about.html"> Event Overview</a></li>
-                      <li><a href="speakers.html"> Speakers</a></li>
-                      <li><a href="schedule.html">Schedule</a></li>
-                    </ul>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <nav class="navbar navbar-expand-lg">
+              <!-- Logo -->
+              <a class="navbar-brand logo" href="index.html">
+                <img src="img/core-img/ASEA-LOGO.png" alt="ASEA Logo" />
+              </a>
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-toggle="collapse"
+                data-target="#conferNavbar"
+                aria-controls="conferNavbar"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+              >
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <!-- Navbar -->
+              <div class="collapse navbar-collapse" id="conferNavbar">
+                <ul class="navbar-nav ml-auto main-menu">
+                  <li class="nav-item active">
+                    <a class="nav-link" href="index.html">HOME</a>
                   </li>
-
-                  <li><a href="schedule.html"> Program</a></li>
-                  <li><a href="accommodation.html">Accommodation</a></li>
-                  <li><a href="contact.html">Contact</a></li>
-                  <li><a href="travel.html">Travel</a></li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="about.html">ABOUT</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="schedule.html">PROGRAM</a>
+                  </li>
+                  <!-- <li class="nav-item">
+                    <a class="nav-link" href="speakers.html">SPEAKERS</a>
+                  </li> -->
+                  <li class="nav-item">
+                    <a class="nav-link" href="sponsors.html">SPONSORS</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="accommodation.html"
+                      >Accommodation</a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="travel.html">DESTINATION GUIDE</a>
+                  </li>
+                  <!-- <li class="nav-item">
+                    <a class="nav-link" href="#">MEDIA</a>
+                  </li> -->
                 </ul>
-
-                <!-- Get Tickets Button -->
-                <a
-                  href="registration.html"
-                  class="btn confer-btn mt-3 mt-lg-0 ml-3 ml-lg-5"
-                  >Register Now <i class="zmdi zmdi-long-arrow-right"></i
-                ></a>
               </div>
-              <!-- Nav End -->
-            </div>
-          </nav>
+
+              <!-- Register Button -->
+              <a href="registration.html" class="register-btn">REGISTER</a>
+            </nav>
+          </div>
         </div>
       </div>
     </header>
