--- a/registration.html
+++ b/registration.html
@@ -321,9 +321,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="schedule.html">PROGRAM</a>
                   </li>
-                  <!-- <li class="nav-item">
+                  <li class="nav-item">
                     <a class="nav-link" href="speakers.html">SPEAKERS</a>
-                  </li> -->
+                  </li>
                   <li class="nav-item">
                     <a class="nav-link" href="sponsors.html">SPONSORS</a>
                   </li>
