--- a/sponsors.html
+++ b/sponsors.html
@@ -257,7 +257,7 @@
         transition: all 0.3s ease;
         background: transparent;
       }
-       .footer-area {
+      .footer-area {
         background: var(--dark-color);
         color: #aaa;
         padding: 70px 0 0;
@@ -453,9 +453,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="schedule.html">PROGRAM</a>
                   </li>
-                  <!-- <li class="nav-item">
+                  <li class="nav-item">
                     <a class="nav-link" href="speakers.html">SPEAKERS</a>
-                  </li> -->
+                  </li>
                   <li class="nav-item">
                     <a class="nav-link" href="sponsors.html">SPONSORS</a>
                   </li>
