--- a/travel.html
+++ b/travel.html
@@ -8,9 +8,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-   <link
+    
+    <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
     <!-- Title -->
     <title>ASEA - Travel Information</title>
@@ -250,7 +251,7 @@
         padding: 30px;
         background: #f8f9fa;
       }
-         .footer-area {
+      .footer-area {
         background: var(--dark-color);
         color: #aaa;
         padding: 70px 0 0;
@@ -446,9 +447,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="schedule.html">PROGRAM</a>
                   </li>
-                  <!-- <li class="nav-item">
+                  <li class="nav-item">
                     <a class="nav-link" href="speakers.html">SPEAKERS</a>
-                  </li> -->
+                  </li>
                   <li class="nav-item">
                     <a class="nav-link" href="sponsors.html">SPONSORS</a>
                   </li>
